monitoring.tf
# Get Ubuntu AMI information 
data "aws_ami" "ubuntu" {
  most_recent = true
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-bionic-18.04-amd64-server-*"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  owners = ["099720109477"] # Canonical
}


# Allocate the EC2 monitoring instance
resource "aws_instance" "monitor" {
  count         = "${var.monitor_servers}"
  ami           = "${data.aws_ami.ubuntu.id}"
  instance_type = "${var.monitor_instance_type}"
  subnet_id = "${aws_subnet.pubsub[2].id}"
  vpc_security_group_ids = ["${aws_security_group.monitor_sg.id}"]
  key_name = aws_key_pair.servers_key.key_name
  associate_public_ip_address = true
  
  tags = {
    Owner = var.owner
    Name  = "Monitor_Server-${count.index+1}"
  }

  connection {
    type = "ssh"
    host = aws_instance.monitor[count.index].public_ip
    user = "ubuntu"
    private_key = tls_private_key.servers_key.private_key_pem
  }
  provisioner "file" {
    source      = "/Users/adarb/projects/final/monitoring"
    destination = "/home/ubuntu/"
  }

  user_data = <<-EOF
        #! /bin/bash
                sudo apt-get install update -y
                sudo chmod 777 /home/ubuntu/monitoring
                chmod +x /home/ubuntu/monitoring/inst_docker.sh
                chmod +x /home/ubuntu/monitoring/inst_node_exporter.sh
                /home/ubuntu/monitoring/inst_docker.sh
                /home/ubuntu/monitoring/inst_node_exporter.sh
                sudo chmod 666 /var/run/docker.sock
                sudo chmod 666 /home/ubuntu/monitoring/node_exporter.service
                cd /home/ubuntu/monitoring/compose && docker-compose down
                cd /home/ubuntu/monitoring/compose && docker-compose up -d  
EOF
}
